--- a/search.html
+++ b/search.html
@@ -3,341 +3,159 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>HOME</title>
-    <link rel="stylesheet" href="search.css" />
+    <title>History</title>
+    <link rel="stylesheet" href="/asset/css/bootstrap.css" />
     <link
       rel="stylesheet"
-      href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
-      integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z"
+      href="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.9.3/Chart.min.css"
+      integrity="sha512-/zs32ZEJh+/EO2N1b0PEdoA10JkdC3zJ8L5FTiQu82LR9S/rOQNfQN7U59U9BC12swNeRAz3HSzIL2vpp4fv3w=="
       crossorigin="anonymous"
     />
-    <link rel="stylesheet" href="home.css" />
+    <!-- <link rel="stylesheet" href="assets/css/bootstrap-custom.css" /> -->
+
+    <link rel="stylesheet" href="asset/css/search.css" />
+    <link rel="stylesheet" href="asset/css/style.css" />
   </head>
-  <body>
-    <div class="container-xl container">
-      <!-- start header -->
-      <header>
-        <nav class="navbar d-flex bd-highlight">
-          <div class="logo p-2 flex-md-grow-1 bd-highlight align-self-center">
-            Zwallet
-          </div>
-          <img
-            class="p-2 bd-highlight align-self-center"
-            style="height: 100%; width: fit-content"
-            src="../asset/home/fhoto.png"
-            alt=""
-          />
-          <div
-            class="p-2 bd-highlight align-self-center d-flex flex-column bd-highlight"
-          >
-            <div class="nama bd-highlight">Robert Chandler</div>
-            <div class="nama-2 bd-highlight">+62 813 1464 6445</div>
-          </div>
-          <img
-            class="p-2 bd-highlight align-self-center"
-            src="../asset/home/bell.svg"
-            alt=""
-            style="width: fit-content; height: 100%"
-          />
-        </nav>
-      </header>
-      <!-- end header -->
+  <body class="bg-third d-flex flex-column justify-content-lg-between">
+    <!-- Navbar -->
+    <nav class="bg-white py-4 pl-2">
+      <div class="container">
+        <div class="d-flex justify-content-between align-items-center">
+          <h3 class="text-primaryy m-0 text-nuni txt-bold">ZWallet</h3>
 
-      <!-- start body -->
-      <div class="container-body">
-        <div class="d-flex flex-row-reverse bd-highlight">
+          <div class="d-flex align-items-center">
+            <img src="/asset/home/fhoto.png" />
+
+            <div class="mx-3">
+              <div class="font-weight-bold text-nuni">Robert Chandler</div>
+              <div class="small text-nuni">+62 8139 3877 7946</div>
+            </div>
+
+            <a href="#">
+              <img src="/asset/home/bell.svg" />
+            </a>
+          </div>
+        </div>
+      </div>
+    </nav>
+    <!-- End Nav -->
+
+    <!-- Content -->
+    <div class="container my-lg-5 my-4">
+      <div class="row">
+        <div class="col-lg-3 pr-lg-2 pb-lg-0 pb-sm-2 m-lg-0 my-2">
           <div
-            class="content flex-grow-1 bd-highlight mb-3"
-            style="background-color: brown"
+            class="bg-white h-100 navigation d-flex flex-column justify-content-between rounded-14 p-4"
           >
-            <!-- content Dashboard-->
-            <!-- <div class="d-flex flex-column bd-highlight" style="height: 700px">
-              <div class="content-menu bd-highlight">
-                <div class="d-flex bd-highlight" style="height: 100%">
-                  <div class="p-2 flex-grow-1 bd-highlight align-self-center">
-                    <div class="d-flex flex-column bd-highlight ml-3">
-                      <div class="balance p-2 flex-fill bd-highlight">
-                        Balance
-                      </div>
-                      <div class="rupiah p-2 flex-md-fill bd-highlight">
-                        Rp. 120.000
-                      </div>
-                      <div class="nope p-2 flex-fill bd-highlight">
-                        +62 813 1464 6445
-                      </div>
-                    </div>
-                  </div>
-                  <div class="p-2 bd-highlight mr-3 align-self-center">
-                    <div class="d-flex flex-column bd-highlight">
-                      <div class="balance p-2 flex-fill bd-highlight">
-                        <button
-                          type="button"
-                          class="link-content btn btn-outline-light"
-                        >
-                          <img
-                            src="../asset/home/arrow-up.png"
-                            alt=""
-                            srcset=""
-                          /><span class="pr-1"> Transfer </span>
-                        </button>
-                      </div>
-                      <div class="nope p-2 flex-fill bd-highlight">
-                        <button
-                          type="button"
-                          class="link-content btn btn-outline-light"
-                        >
-                          <img
-                            src="../asset/home/plus.png"
-                            alt=""
-                            srcset=""
-                          /><span class="pr-3"> Top Up </span>
-                        </button>
-                      </div>
-                    </div>
+            <ul class="m-0 pl-md-3">
+              <li class="d-flex align-items-center py-4">
+                <img src="/asset/home/grid.png" />
+                <a href="home.html" class="ml-3 text-nuni"> Dashboard </a>
+              </li>
+
+              <li class="d-flex align-items-center py-4 active">
+                <img src="/asset/home/arrow-up.png" />
+                <a href="search.html" class="ml-3 text-nuni"> Transfer </a>
+              </li>
+
+              <li class="d-flex align-items-center py-4">
+                <img src="/asset/home/plus.png" />
+                <a href="#" class="ml-3 text-nuni"> Top Up </a>
+              </li>
+
+              <li class="d-flex align-items-center py-4">
+                <img src="/asset/home/user.png" />
+                <a href="#" class="ml-3 text-nuni"> Profile </a>
+              </li>
+            </ul>
+
+            <ul class="m-0 pl-md-3">
+              <li class="d-flex align-items-center py-2">
+                <img src="/asset/home/log-out.png" />
+                <a href="#" class="ml-3 text-nuni"> Logout </a>
+              </li>
+            </ul>
+          </div>
+        </div>
+
+        <div class="col-lg-9 pl-lg-2">
+          <div class="bg-white rounded-14 h-100">
+            <div class="d-flex flex-column px-4 py-2">
+              <!-- copy -->
+              <h5 class="text-nuni txt-bold my-3">Search Receiver</h5>
+              <div class="input-container">
+                <img src="asset/history/search.png" alt="" srcset="" />
+                <input type="text" class="input-search ml-2" />
+              </div>
+              <div class="bg-white shadow-sm mt-4 p-3 rounded-14">
+                <div class="d-flex flex-row align-items-center">
+                  <img src="/asset/history/1.png" alt="" />
+                  <div class="ml-3">
+                    <div class="text-nuni txt-bold">Samuel Suhi</div>
+                    <div class="small text-nuni">+62 813-8492-9994</div>
                   </div>
                 </div>
               </div>
-              <div class="graph-menu d-flex flex-row bd-highlight">
-                <div class="item-1 p-2 bd-highlight">Flex item 1</div>
-                <div class="item-2 p-2 bd-highlight">
-                  <div class="row item-content">
-                    <div class="item-content-title col-sm-8" style="padding: 0">
-                      Transaction History
-                    </div>
-                    <div class="col-sm-4" style="padding: 0; text-align: right">
-                      <a href=""> See all </a>
-                    </div>
-                  </div>
-                  <div class="row item-content align-items-center">
-                    <div class="col-sm-8" style="padding-right: 0">
-                      <div class="row align-items-center">
-                        <img
-                          class="col-4"
-                          src="../asset/home/1.png"
-                          alt=""
-                          style="padding: 0"
-                        />
-                        <div class="col-8">
-                          <div class="row">
-                            <div class="item-content-name col">Samuel Suhi</div>
-                            <div class="w-100"></div>
-                            <div class="item-content-status col">Transfer</div>
-                          </div>
-                        </div>
-                      </div>
-                    </div>
-                    <div class="trans col-sm-4" style="color: #1ec15f">
-                      +Rp.50.000
-                    </div>
-                  </div>
-                  <div class="row item-content align-items-center">
-                    <div class="col-sm-8" style="padding-right: 0">
-                      <div class="row align-items-center">
-                        <div class="col-4" style="align-items: center">
-                          <img src="../asset/home/image 1.png" alt="" />
-                        </div>
-                        <div class="col-8">
-                          <div class="row">
-                            <div class="item-content-name col">Netflix</div>
-                            <div class="w-100"></div>
-                            <div class="item-content-status col">
-                              Subscription
-                            </div>
-                          </div>
-                        </div>
-                      </div>
-                    </div>
-                    <div class="trans col-sm-4" style="color: #ff5b37">
-                      -Rp.149.000
-                    </div>
-                  </div>
-                  <div class="row item-content align-items-center">
-                    <div class="col-sm-8" style="padding-right: 0">
-                      <div class="row align-items-center">
-                        <img
-                          class="col-4"
-                          src="../asset/home/2.png"
-                          alt=""
-                          style="padding: 0"
-                        />
-                        <div class="col-8">
-                          <div class="row">
-                            <div class="item-content-name col">
-                              Christine Mar...
-                            </div>
-                            <div class="w-100"></div>
-                            <div class="item-content-status col">Transfer</div>
-                          </div>
-                        </div>
-                      </div>
-                    </div>
-                    <div class="trans col-sm-4" style="color: #1ec15f">
-                      +Rp.150.000
-                    </div>
-                  </div>
-                  <div class="row item-content align-items-center">
-                    <div class="col-sm-8" style="padding-right: 0">
-                      <div class="row align-items-center">
-                        <div class="col-4" style="align-items: center">
-                          <img src="../asset/home/image 3.png" alt="" />
-                        </div>
-                        <div class="col-8">
-                          <div class="row">
-                            <div class="item-content-name col">Adobe Inc.</div>
-                            <div class="w-100"></div>
-                            <div class="item-content-status col">
-                              Subscription
-                            </div>
-                          </div>
-                        </div>
-                      </div>
-                    </div>
-                    <div class="trans col-sm-4" style="color: #ff5b37">
-                      -Rp.249.000
-                    </div>
+              <div class="bg-white shadow-sm mt-4 p-3 rounded-14">
+                <div class="d-flex flex-row align-items-center">
+                  <img src="/asset/history/2.png" alt="" />
+                  <div class="ml-3">
+                    <div class="text-nuni txt-bold">Momo Taro</div>
+                    <div class="small text-nuni">+62 812-4343-6731</div>
                   </div>
                 </div>
               </div>
-            </div> -->
+              <div class="bg-white shadow-sm mt-4 p-3 rounded-14">
+                <div class="d-flex flex-row align-items-center">
+                  <img src="/asset/history/3.png" alt="" />
+                  <div class="ml-3">
+                    <div class="text-nuni txt-bold">Jessica Keen</div>
+                    <div class="small text-nuni">+62 811-3452-5252</div>
+                  </div>
+                </div>
+              </div>
+              <div class="bg-white shadow-sm my-4 p-3 rounded-14">
+                <div class="d-flex flex-row align-items-center">
+                  <img src="/asset/history/Rectangle 25.png" alt="" />
+                  <div class="ml-3">
+                    <div class="text-nuni txt-bold">Michael Le</div>
+                    <div class="small text-nuni">+62 810-4224-4613</div>
+                  </div>
+                </div>
+              </div>
 
-            <!-- end content Dashboard -->
-          </div>
-          <div class="bar bd-highlight pl-3 pr-2 mb-3">
-            <div class="d-flex flex-column bd-highlight" style="height: 700px">
-              <a
-                href="/dasboard/dasboard.html"
-                class="align-self-baseline"
-                style="text-decoration: none"
-              >
-                <div class="bar-menu p-2 bd-highlight d-flex">
-                  <img
-                    class="bd-highlight align-self-center"
-                    src="../asset/home/grid.png"
-                    alt=""
-                    srcset=""
-                  />
-                  <div
-                    class="navbar-menu bd-highlight align-self-center ml-3 mb-3 mt-3"
-                  >
-                    Dashboard
-                  </div>
-                </div>
-              </a>
-              <a
-                href="/transfer/transfer.html"
-                class="align-self-baseline"
-                style="text-decoration: none"
-              >
-                <div class="bar-menu p-2 bd-highlight d-flex">
-                  <img
-                    class="bd-highlight align-self-center"
-                    src="../asset/home/arrow-up.png"
-                    alt=""
-                    srcset=""
-                  />
-                  <div
-                    class="navbar-menu bd-highlight align-self-center ml-3 mb-3 mt-3"
-                  >
-                    Transfer
-                  </div>
-                </div>
-              </a>
-              <a
-                href="/topUp/topUp.html"
-                class="align-self-baseline"
-                style="text-decoration: none"
-              >
-                <div class="bar-menu p-2 bd-highlight d-flex">
-                  <img
-                    class="bd-highlight align-self-center"
-                    src="../asset/home/plus.png"
-                    alt=""
-                    srcset=""
-                  />
-                  <div
-                    class="navbar-menu bd-highlight align-self-center ml-3 mb-3 mt-3"
-                  >
-                    Top Up
-                  </div>
-                </div>
-              </a>
-              <a
-                href="/profile/profile.html"
-                class="align-self-baseline"
-                style="text-decoration: none"
-              >
-                <div class="bar-menu p-2 bd-highlight d-flex">
-                  <img
-                    class="bd-highlight align-self-center"
-                    src="../asset/home/user.png"
-                    alt=""
-                    srcset=""
-                  />
-                  <div
-                    class="navbar-menu bd-highlight align-self-center ml-3 mb-3 mt-3"
-                  >
-                    Profile
-                  </div>
-                </div>
-              </a>
-              <a
-                href="/index.html"
-                class="mt-auto mb-2 align-self-baseline"
-                style="text-decoration: none"
-              >
-                <div class="bar-menu-bot p-2 bd-highlight d-flex">
-                  <img
-                    class="bd-highlight align-self-center"
-                    src="../asset/home/log-out.png"
-                    alt=""
-                    srcset=""
-                  />
-                  <div
-                    class="navbar-menu bd-highlight align-self-center ml-3 mb-3 mt-3"
-                  >
-                    Logout
-                  </div>
-                </div>
-              </a>
+              <!-- end copy -->
             </div>
           </div>
         </div>
       </div>
+    </div>
+    <!-- End Content -->
 
-      <!-- end body -->
-
-      <!-- start footer -->
-      <footer>
-        <nav class="navbar d-flex bd-highlight">
-          <div
-            class="copyright p-2 flex-md-grow-1 bd-highlight align-self-center"
-          >
+    <!-- footer -->
+    <nav class="bg-primaryy py-3 mt-3">
+      <div class="container">
+        <div
+          class="d-flex justify-content-lg-between flex-column flex-lg-row align-items-center"
+        >
+          <div class="text-white text-nuni">
             2020 Zwallet. All right reserved.
           </div>
-          <div class="contact p-2 bd-highlight align-self-center">
-            +62 813 1464 6445
+          <div class="d-flex flex-column flex-lg-row text-nuni">
+            <div class="text-white px-5 text-nuni">+62 5637 8882 9901</div>
+            <div class="text-white px-5 px-lg-5 text-nuni">
+              contact@zwallet.com
+            </div>
           </div>
-          <div class="contact p-2 bd-highlight align-self-center">
-            contact@zwallet.com
-          </div>
-        </nav>
-      </footer>
+        </div>
+      </div>
+    </nav>
 
-      <!-- end footer -->
-    </div>
+    <script src="assets/js/jquery-slim.min.js"></script>
+    <script src="/asset/js/bootstrap.js"></script>
     <script
-      src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
-      integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
-      crossorigin="anonymous"
-    ></script>
-    <script
-      src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"
-      integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN"
-      crossorigin="anonymous"
-    ></script>
-    <script
-      src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"
-      integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV"
+      src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.9.3/Chart.min.js"
+      integrity="sha512-s+xg36jbIujB2S2VKfpGmlC3T5V2TF3lY48DX7u2r9XzGzgPsa6wTpOQA7J9iffvdeBN0q9tKzRxVxw1JviZPg=="
       crossorigin="anonymous"
     ></script>
   </body>
